# SolWizard

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md
examples/: erc20.md  examples.md
src/: cli.yml  main.rs
src/contracts/: mod.rs
src/contracts/helpers/: mod.rs  template.rs
src/create/: mod.rs  util.rs
src/create/helpers/: install.txt  mod.rs  template.rs
src/helpers/: mod.rs
tests/: cli.rs
