[package]
name = "solwizard"
version = "0.1.0"
edition = "2021"
include = [
    "src/**/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
homepage = "https://github.com/WillDera/SolWizard"
description = "Solidity bootstrapper built with Rust"
repository = "https://github.com/WillDera/SolWizard"
keywords = [
    "cli",
    "bootstrap",
    "solidity"
]
categories = ["command-line-interface"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
# clap = "4.1.4"
indicatif = "0.17.2"
handlebars = "4.3.6"
serde_json = "1.0.91"
fancy = "0.3.1"

[dev-dependencies]
assert_cmd = "2.0.8"
